updated previous button

--- a/emergency_stop.html
+++ b/emergency_stop.html
@@ -139,7 +139,7 @@
     </div>
     
     <div class="button-container">
-        <button class="button" onclick="location.href='key_step_driving.html'">Previous</button>
+        <button class="button" onclick="location.href='index.html'">Previous</button>
         <button class="button" onclick="location.href='three_point_turn.html'">Next</button>
     </div>
 </body>
